# minimoog-dsp-simulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
assets/dx7_presets/: 01_electric_piano.json  02_dx_bass.json  03_brass_stab.json  04_marimba.json  05_strings_pad.json  06_tubular_bells.json  07_organ.json  08_synth_lead.json  09_vibraphone.json  10_harmonica.json
assets/effect_presets/: 01_clean_boost.json  02_mild_overdrive.json  03_heavy_distortion.json  04_chorus_clean.json  05_delay_reverb.json  06_cathedral_shimmer.json  07_summer_boost.json  08_jet_flanger.json  09_phaser_funk.json  10_tremolo_warm.json  11_tape_echo.json  12_spring_reverb.json  13_leslie_cabinet.json  14_stereo_widener.json  15_metal_crunch.json  16_lush_ensemble.json  17_infinite_room.json  18_auto_wah.json  19_slapback_echo.json  20_vintage_flanger.json
assets/global_presets/: 01_moog_arena_lead.json  02_moog_deep_sub.json  03_moog_acid_house.json  04_moog_ambient_pad.json  05_moog_retro_funk.json  06_moog_dark_drone.json  07_moog_80s_poly.json  08_hammond_gospel_live.json  09_hammond_jazz_club.json  10_hammond_prog_rock.json  11_hammond_soul_groove.json  12_hammond_church.json  13_rhodes_neo_soul.json  14_rhodes_jazz_lounge.json  15_rhodes_funk_wah.json  16_rhodes_chill_wave.json  17_rhodes_vintage_amp.json  18_dx7_80s_ep.json  19_dx7_crystal_bells.json  20_dx7_synth_brass.json  21_dx7_ambient_bell.json  22_dx7_bass_stab.json  23_dx7_fm_organ.json  24_mellotron_strawberry.json  25_mellotron_space_choir.json  26_mellotron_vintage_orch.json  27_mellotron_dark_ambient.json  28_mellotron_brass_section.json  29_drums_808_boom.json  30_drums_rock_kit.json  31_drums_jazz_brush.json  32_drums_electronic.json  33_drums_lo_fi.json  34_drums_dub_echo.json  35_drums_industrial.json  36_moog_berlin_school.json  37_moog_theremin_glide.json  38_moog_fat_poly.json  39_moog_filter_bass.json  40_hammond_blues_roadhouse.json  (+15 more)
assets/hammond_presets/: 01_jimmy_smith_jazz.json  02_gospel_full.json  03_rock_overdrive.json  04_soft_ballad.json  05_booker_t.json  06_cathedral_organ.json  07_reggae_bubble.json  08_gospel_shout.json  09_jazz_trio.json  10_progressive_rock.json  11_jon_lord_hard_rock.json  12_gregg_allman_southern.json  13_larry_young_modal.json  14_shirley_scott_bebop.json  15_rod_argent_psych.json  16_wild_bill_davis_cocktail.json  17_jack_mcduff_funk.json  18_chester_thompson_rb.json  19_billy_preston_gospel_rock.json  20_jimmy_mcgriff_soul_jazz.json
assets/mellotron_presets/: 01_orchestral_strings.json  02_choir_angelic.json  03_solo_flute.json  04_power_brass.json  05_lo_fi_strings.json  06_ethereal_choir.json  07_vintage_flute.json  08_dark_strings.json  09_mellow_brass.json  10_tape_degraded.json
assets/midi/: bach_wtk-i_866_(c)simonetto.mid
assets/moog_presets/: 01_classic_bass.json  02_fat_unison_bass.json  03_squelchy_acid.json  04_warm_pad.json  05_screaming_lead.json  06_funky_clav.json  07_brass_stab.json  08_percussive_pluck.json  09_sub_bass.json  10_cosmic_sweep.json  arp_sequence.json  bass_bootsy.json  bass_classic.json  bass_fat.json  bass_funk.json  bass_geddy_lee.json  bass_new_order.json  bass_sub.json  bass_taurus.json  brass_stab.json  fx_sweep.json  keys_pluck.json  lead_acid.json  lead_emerson.json  lead_herbie_hancock.json  lead_jazz_unison.json  lead_lucky_man.json  lead_mellow.json  lead_moroder.json  lead_prog_rock.json  lead_rick_wakeman.json  lead_theremin.json  lead_unison_fat.json  pad_analog_strings.json  pad_solar_wind.json  pad_strings.json  pad_tangerine_dream.json  pad_vangelis.json  pad_warm.json  perc_electronic_tom.json
assets/patterns/: acid_303.json  blue_monday.json  blues_shuffle.json  reggae_offbeat.json  techno_pulse.json
assets/presets/: arp_sequence.json  bass_classic.json  bass_fat.json  bass_funk.json  bass_sub.json  bass_taurus.json  brass_stab.json  fx_sweep.json  keys_pluck.json  lead_acid.json  lead_emerson.json  lead_lucky_man.json  lead_mellow.json  lead_prog_rock.json  lead_theremin.json  lead_unison_fat.json  pad_analog_strings.json  pad_solar_wind.json  pad_strings.json  pad_warm.json
assets/rhodes_presets/: 01_classic_ep.json  02_suitcase_tremolo.json  03_dyno_bright.json  04_jazz_ballad.json  05_funk_rhodes.json  06_glass_keys.json  07_lo_fi_keys.json  08_wurlitzer_style.json  09_dream_pad.json  10_neo_soul.json
assets/sequencer_patterns/: autobahn.json  bossa_nova.json  cantaloupe_island.json  donna_disco.json  funk_pocket.json  miami_vice.json  night_rider.json  oxygene_arp.json  pacman_intermission.json  pentatonic_run.json  popcorn_melody.json  psycho_funk.json  spy_theme.json  tubular_bells.json  walking_bass.json
core/dsp/: envelope.cpp  envelope.h  glide.cpp  glide.h  lfo.cpp  lfo.h  moog_filter.cpp  moog_filter.h  noise.h  oscillator.cpp  oscillator.h  param_smoother.h
core/effects/: chorus_effect.cpp  chorus_effect.h  delay_effect.cpp  delay_effect.h  effect_base.h  effect_chain.cpp  effect_chain.h  eq_effect.cpp  eq_effect.h  flanger_effect.cpp  flanger_effect.h  gain_effect.cpp  gain_effect.h  phaser_effect.cpp  phaser_effect.h  reverb_effect.cpp  reverb_effect.h  tremolo_effect.cpp  tremolo_effect.h
core/engine/: synth_engine.cpp  synth_engine.h
core/engines/: engine_manager.cpp  engine_manager.h  iengine.h
core/music/: arpeggiator.cpp  arpeggiator.h  chord_engine.cpp  chord_engine.h  midi_file_player.cpp  midi_file_player.h  scale_quantizer.cpp  scale_quantizer.h  (+2 more)
documents/: DSP_Engine_Analysis_v1.md  DSP_Engine_Analysis_v2.md  Engine_Improvements_Log.md  Hammond_B3_Engine_Analysis.md  Huong_Dan_Su_Dung.md  MiniMoog DSP Simulator - TDD - V1.md  MiniMoog DSP Simulator - TDD - V2.1.md  MiniMoog DSP Simulator - TDD - V2.2.md  Preset_Reference_Guide.md  Visualization_Guide.md
shared/: interfaces.h  params.cpp  params.h  types.h
sim/: main.cpp
tests/: CMakeLists.txt  test_arpeggiator.cpp  test_envelope.cpp  test_glide.cpp  test_main.cpp  test_moog_filter.cpp  test_oscillator.cpp  test_scale_quantizer.cpp  test_sequencer.cpp  test_voice.cpp
tools/: gen_midi_assets.cpp
ui/: imgui_app.cpp  imgui_app.h
(+119 files in other folders)
